Bug 474123 - Warning logged when undoing after seeking on animation timeline
Summary: Warning logged when undoing after seeking on animation timeline
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Animation (other bugs)
Version First Reported In: git master (please specify the git hash!)
Platform: Other Other
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2023-09-04 02:44 UTC by Freya Lupen
Modified: 2023-09-18 15:09 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Freya Lupen 2023-09-04 02:44:21 UTC
SUMMARY
Seeking to a frame and then undoing an undo step logs from KisTransactionData::Private::possiblySwitchCurrentTime()
> WARNING: undo command has been executed, when another frame has been active. That shouldn't have happened.

STEPS TO REPRODUCE
1. Open a document, make a brushstroke.
2. Seek to another frame on the animation timeline.
3. Undo the brushstroke.

OBSERVED RESULT
A warning.

EXPECTED RESULT
No warning.

SOFTWARE/OS VERSIONS
Krita 5.3.0-prealpha git 7df07038
Comment 1 Dmitry Kazakov 2023-09-18 15:09:43 UTC
Git commit 577084975998ceeb2a02b251967450558e5ff10f by Dmitry Kazakov.
Committed on 18/09/2023 at 17:09.
Pushed by dkazakov into branch 'master'.

Remove a warning from KisTransactionData...possiblySwitchCurrentTime()

Originally, all aour time switches were undoable. This changes some
time ago, so switching time doesn't actually create an undo state. It
means that possiblySwitchCurrentTime() now does the switching when
necessary

M  +0    -1    libs/image/kis_transaction_data.cpp

https://invent.kde.org/graphics/krita/-/commit/577084975998ceeb2a02b251967450558e5ff10f
Comment 2 Dmitry Kazakov 2023-09-18 15:09:57 UTC
Git commit 09ebd1f8893f8ffa90af190edc2bfb8e180da181 by Dmitry Kazakov.
Committed on 18/09/2023 at 17:07.
Pushed by dkazakov into branch 'krita/5.2'.

Remove a warning from KisTransactionData...possiblySwitchCurrentTime()

Originally, all aour time switches were undoable. This changes some
time ago, so switching time doesn't actually create an undo state. It
means that possiblySwitchCurrentTime() now does the switching when
necessary

M  +0    -1    libs/image/kis_transaction_data.cpp

https://invent.kde.org/graphics/krita/-/commit/09ebd1f8893f8ffa90af190edc2bfb8e180da181