Remove a warning from KisTransactionData...possiblySwitchCurrentTime()

Originally, all aour time switches were undoable. This changes some
time ago, so switching time doesn't actually create an undo state. It
means that possiblySwitchCurrentTime() now does the switching when
necessary

BUG:474123